--- a/HotelWebSite/Views/Employee/Index.cshtml
+++ b/HotelWebSite/Views/Employee/Index.cshtml
@@ -28,3 +28,10 @@
         }
     </tbody>
 </table>
+<div class="row text-center">
+    <a href="/Employee/Create" class="btn btn-primary btn-sm">
+        ADD
+        <span class="glyphicon glyphicon-plus"></span>
+    </a>
+</div>
+
