--- a/HotelWebSite/Views/Employee/Create.cshtml
+++ b/HotelWebSite/Views/Employee/Create.cshtml
@@ -66,7 +66,7 @@
     </div>
 
     <div class="form-group">
-        <button class="btn btn-success btn-sm pull-left" type="submit">
+        <button class="btn btn-success btn-sm pull-left" type="submit" name="bt">
             <span class="glyphicon glyphicon-save"></span>
             ذخیره
         </button>
