--- a/HotelWebSite/Views/Shared/_Layout.cshtml
+++ b/HotelWebSite/Views/Shared/_Layout.cshtml
@@ -4,9 +4,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="~/Content/bootstrap-rtl.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-theme-rtl.css" rel="stylesheet" />
     <link href="~/Content/Main.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-inverse">
@@ -30,7 +33,7 @@
             @if (TempData["Message"] != null)
             {
                 <div class="alert alert-info">
-                    <strong>Info!</strong> @TempData["Message"]
+                    <strong>@TempData["Message"]</strong>
                 </div>
             }
             @RenderBody()
