passanger and Employee and Entity Updated

--- a/HotelWebSite/Views/Employee/Create.cshtml
+++ b/HotelWebSite/Views/Employee/Create.cshtml
@@ -101,7 +101,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.PasswordHash, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.PasswordHash, new
+            @Html.PasswordFor(m => m.PasswordHash, new
        {
            @class = "form-control",
            placeholder = "رمز عبور"
