--- a/HotelWebSite/Views/Passenger/Index.cshtml
+++ b/HotelWebSite/Views/Passenger/Index.cshtml
@@ -78,11 +78,11 @@
         </td>
 
         <td>
-            <a href="@Url.Action("Delete","Guest",new { id = item.Id })" class="btn btn-danger btn-sm">
+            <a href="@Url.Action("Delete","Passenger",new { id = item.Id })" class="btn btn-danger btn-sm">
                 <span class="glyphicon glyphicon-remove"></span>
             </a>
             |
-            <a href="@Url.Action("Edit","Guest",new { id = item.Id })" class="btn btn-success btn-sm">
+            <a href="@Url.Action("Edit","Passenger",new { id = item.Id })" class="btn btn-success btn-sm">
                 <span class="glyphicon glyphicon-pencil"></span>
             </a>
         </td>
