--- a/HotelWebSite/Views/Guest/Edit.cshtml
+++ b/HotelWebSite/Views/Guest/Edit.cshtml
@@ -6,55 +6,64 @@
 
 <h2>Edit</h2>
 
-<form method="post" class="form-horizontal">
-    <div class="form-group">
-        <label class="control-label col-md-2" for="Name">نام</label>
-        <div class="col-md-10">
-            <input type="text" name="Name" id="Name" placeholder="نام" class="form-control" value="@Model.Name" />
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-md-2" for="Family">نام خانوادگی</label>
-        <div class="col-md-10">
-            <input type="text" name="Family" id="Family" placeholder="نام خانوادگی" class="form-control" value="@Model.Family" />
-        </div>
-    </div>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    
+    <div class="form-horizontal">
+        <h4>Guest</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
 
-    <div class="form-group">
-        <label class="control-label col-md-2" for="Age">سن</label>
-        <div class="col-md-10">
-            <input type="number" name="Age" id="Age" placeholder="سن" class="form-control" value="@Model.Age" />
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="control-label col-md-2">جنسیت</label>
-        <div class="col-md-5">
-            <label for="Sex-man">مرد</label>
-            <input type="radio" name="Sex" id="Sex-man" value="Man" />
-        </div>
-        <div class="col-md-5">
-            <label for="Sex-female">زن</label>
-            <input type="radio" name="Sex" id="Sex-female" value="Female" />
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            </div>
         </div>
 
-    </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Family, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Family, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Family, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.Age, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Age, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Age, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-    <div class="form-group">
-        <label class="control-label col-md-2" for="NationalCode">شماره شناسنامه</label>
-        <div class="col-md-10">
-            <input type="text" name="NationalCode" id="NationalCode" placeholder="شماره شناسنامه" class="form-control" value="@Model.NationalCode" />
+        <div class="form-group">
+            @Html.LabelFor(model => model.NationalCode, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NationalCode, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NationalCode, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Sex, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Sex, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Sex, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
         </div>
     </div>
+}
 
-
-    <input type="hidden" value="@Model.PassengerId" />
-    <div class="form-group">
-        @*<input type="hidden" value="@Model.Id" />*@
-        <button class="btn btn-success btn-sm pull-left" type="submit" name="bt">
-            <span class="glyphicon glyphicon-save"></span>
-            ذخیره
-        </button>
-    </div>
-</form>
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
