--- a/HotelWebSite/Views/Passenger/Create.cshtml
+++ b/HotelWebSite/Views/Passenger/Create.cshtml
@@ -4,14 +4,13 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>ایجاد مسافر جدید</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Passenger</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -87,20 +86,19 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                @*<input type="submit" value="اضافه کردن اطلاعات همراه جدید" class="btn btn-primary" />*@
-            </div>
-        </div>
 
-        <div class="form-group pull-left">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+
+        <div class="form-group">
+            <a href="@Url.Action("Index")" class="btn btn-primary btn-sm">
+                <span class="glyphicon glyphicon-backward"></span>
+                بازگشت به لیست مسافر ها
+            </a>
+
+            <button class="btn btn-sm btn-success pull-left" type="submit">
+                <span class="glyphicon glyphicon-save"></span>
+                ذخیره
+            </button>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
