--- a/HotelWebSite/Views/Passenger/Edit.cshtml
+++ b/HotelWebSite/Views/Passenger/Edit.cshtml
@@ -49,11 +49,16 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Sex, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Sex, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Sex, "", new { @class = "text-danger" })
+            <label class="control-label col-md-2">جنسیت</label>
+            <div class="col-md-5">
+                <label for="Sex-man">مرد</label>
+                <input type="radio" name="Sex" id="Sex-man" value="Man" />
             </div>
+            <div class="col-md-5">
+                <label for="Sex-female">زن</label>
+                <input type="radio" name="Sex" id="Sex-female" value="Female" />
+            </div>
+
         </div>
 
         <div class="form-group">
