--- a/HotelWebSite/Views/Guest/Edit.cshtml
+++ b/HotelWebSite/Views/Guest/Edit.cshtml
@@ -28,6 +28,20 @@
     </div>
 
     <div class="form-group">
+        <label class="control-label col-md-2">جنسیت</label>
+        <div class="col-md-5">
+            <label for="Sex-man">مرد</label>
+            <input type="radio" name="Sex" id="Sex-man" value="Man" />
+        </div>
+        <div class="col-md-5">
+            <label for="Sex-female">زن</label>
+            <input type="radio" name="Sex" id="Sex-female" value="Female" />
+        </div>
+
+    </div>
+
+
+    <div class="form-group">
         <label class="control-label col-md-2" for="NationalCode">شماره شناسنامه</label>
         <div class="col-md-10">
             <input type="text" name="NationalCode" id="NationalCode" placeholder="شماره شناسنامه" class="form-control" value="@Model.NationalCode" />
