--- a/HotelWebSite/Views/Employee/Edit.cshtml
+++ b/HotelWebSite/Views/Employee/Edit.cshtml
@@ -98,14 +98,14 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.PasswordHash, new { @class = "col-md-2 control-label" })
+        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.PasswordFor(m => m.PasswordHash, new
+            @Html.PasswordFor(m => m.Password, new
        {
            @class = "form-control",
            placeholder = "رمز عبور"
        })
-            @Html.ValidationMessageFor(m => m.PasswordHash, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
         </div>
     </div>
 
