junction table added

--- a/HotelWebSite/Views/Employee/Delete.cshtml
+++ b/HotelWebSite/Views/Employee/Delete.cshtml
@@ -8,7 +8,7 @@
         <thead>
             <tr>
                 <th class="text-center">نام</th>
-                <th class="text-center">نام خانوادکی</th>
+                <th class="text-center">نام خانوادگی</th>
                 <th class="text-center">سن</th>
                 <th class="text-center">جنسیت</th>
                 <th class="text-center">نام کاربری</th>
