--- a/HotelWebSite/Views/Guest/Delete.cshtml
+++ b/HotelWebSite/Views/Guest/Delete.cshtml
@@ -4,70 +4,39 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>آیا از حذف این اطلاعات اطمینان دارید ؟ </h3>
-<div>
-    <h4>Guest</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        @*<dt>
-            @Html.DisplayNameFor(model => model.Passenger.Name)
-        </dt>*@
-
-        @*<dd>
-            @Html.DisplayFor(model => model.Passenger.Name)
-        </dd>*@
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Family)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Family)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Age)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Age)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NationalCode)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NationalCode)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Sex)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Sex)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
+<div class="col-md-12 jumbotron">
+    <table class="table table-bordered table-striped table-hover">
+        <thead>
+            <tr>
+                <th class="text-center">@Html.DisplayNameFor(model => model.Name)</th>
+                <th class="text-center">@Html.DisplayNameFor(model => model.Family)</th>
+                <th class="text-center">@Html.DisplayNameFor(model => model.Age)</th>
+                <th class="text-center">@Html.DisplayNameFor(model => model.Sex)</th>
+                <th class="text-center">@Html.DisplayNameFor(model => model.NationalCode)</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="text-center">
+                <td>@Html.DisplayFor(model => model.Name)</td>
+                <td>@Html.DisplayFor(model => model.Family)</td>
+                <td>@Html.DisplayFor(model => model.Age)</td>
+                <td>@Html.DisplayFor(model => model.Sex)</td>
+                <td>@Html.DisplayFor(model => model.NationalCode)</td>
+            </tr>
+        </tbody>
+    </table>
+    <h3>
+        آیا میخواهید این اطلاعات را حذف کنید ؟
+    </h3>
+    <br />
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            <a href="@Url.Action("List",new { id = Model.PassengerId })">
-                Back To List
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a href="@Url.Action("Index")" class="btn btn-success">
+                برگشت به لیست همراهان
             </a>
         </div>
     }
