--- a/HotelWebSite/Views/Employee/Create.cshtml
+++ b/HotelWebSite/Views/Employee/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Hotels.Model.Employee
+﻿@model HotelWebSite.ViewModels.EmployeeCreate
 @{
     ViewBag.Title = "ایجاد پرسنل جدید";
 }
@@ -7,7 +7,7 @@
 
 
 @using (Html.BeginForm("Create", "Employee", FormMethod.Post,
-                            new { @class = "form-horizontal" }))
+                            new { @class = "form-horizontal", enctype = "multipart/form-data" }))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
@@ -64,8 +64,7 @@
         <div class="col-md-5">
             <label for="Sex-man">مرد</label>
             <input type="radio" name="Sex" id="Sex-man" value="Man" />
-        </div>
-        <div class="col-md-5">
+            <br />
             <label for="Sex-female">زن</label>
             <input type="radio" name="Sex" id="Sex-female" value="Female" />
         </div>
@@ -97,6 +96,16 @@
             @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.PhotoFile, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            <input type="file" id="PhotoFile" name="PhotoFile" class="form-control" />
+            @*@Html.TextBoxFor(, new { type = "file" })*@
+            @Html.ValidationMessageFor(m => m.PhotoFile, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
 
     <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
