--- a/HotelWebSite/Views/Employee/Edit.cshtml
+++ b/HotelWebSite/Views/Employee/Edit.cshtml
@@ -63,8 +63,7 @@
         <div class="col-md-5">
             <label for="Sex-man">مرد</label>
             <input type="radio" name="Sex" id="Sex-man" value="Man" />
-        </div>
-        <div class="col-md-5">
+            <br />
             <label for="Sex-female">زن</label>
             <input type="radio" name="Sex" id="Sex-female" value="Female" />
         </div>
@@ -106,6 +105,8 @@
            placeholder = "رمز عبور"
        })
             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+
+            @*<input type="password" name="Password" id="Password" class="form-control" placeholder="رمز عبور" />*@
         </div>
     </div>
 
