--- a/HotelWebSite/Views/Passenger/Edit.cshtml
+++ b/HotelWebSite/Views/Passenger/Edit.cshtml
@@ -4,14 +4,13 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h3>ویرایش اطلاعات مسافر :</h3>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Passenger</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -53,8 +52,7 @@
             <div class="col-md-5">
                 <label for="Sex-man">مرد</label>
                 <input type="radio" name="Sex" id="Sex-man" value="Man" />
-            </div>
-            <div class="col-md-5">
+                <br />
                 <label for="Sex-female">زن</label>
                 <input type="radio" name="Sex" id="Sex-female" value="Female" />
             </div>
@@ -69,13 +67,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.DaysStays, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DaysStays, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DaysStays, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.PassportNumber, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -93,6 +91,6 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+<a href="@Url.Action("Index")" class="btn btn-success">
+    برگشت به لیست مسافران
+</a>
