--- a/HotelWebSite/Views/Passenger/Index.cshtml
+++ b/HotelWebSite/Views/Passenger/Index.cshtml
@@ -6,6 +6,14 @@
 
 <h3>لیست مسافر ها : </h3>
 <br />
+
+<div class="row text-center">
+    <a href="@Url.Action("Create","Passenger")" class="btn btn-primary btn-sm">
+        ADD
+        <span class="glyphicon glyphicon-plus"></span>
+    </a>
+</div>
+<br>
 <table class="table table-bordered">
     <tr>
         <th>
@@ -17,21 +25,6 @@
         <th class="text-center">
             @Html.DisplayNameFor(model => model.Family)
         </th>
-        @*<th class="text-center">
-            @Html.DisplayNameFor(model => model.Age)
-        </th>*@
-        @*<th class="text-center">
-            @Html.DisplayNameFor(model => model.NationalCode)
-        </th>*@
-        @*<th class="text-center">
-            @Html.DisplayNameFor(model => model.Sex)
-        </th>*@
-        @*<th class="text-center">
-            @Html.DisplayNameFor(model => model.Location)
-        </th>*@
-        @*<th class="text-center">
-            @Html.DisplayNameFor(model => model.DaysStays)
-        </th>*@
         <th class="text-center">
             @Html.DisplayNameFor(model => model.PassportNumber)
         </th>
@@ -54,26 +47,11 @@
         <td>
             @Html.DisplayFor(modelItem => item.Family)
         </td>
-        @*<td>
-            @Html.DisplayFor(modelItem => item.Age)
-        </td>*@
-        @*<td>
-            @Html.DisplayFor(modelItem => item.NationalCode)
-        </td>*@
-        @*<td>
-            @Html.DisplayFor(modelItem => item.Sex)
-        </td>*@
-        @*<td>
-            @Html.DisplayFor(modelItem => item.Location)
-        </td>*@
-        @*<td>
-            @Html.DisplayFor(modelItem => item.DaysStays)
-        </td>*@
         <td>
             @Html.DisplayFor(modelItem => item.PassportNumber)
         </td>
         <td>
-            <a href="#" class="btn btn-default btn-sm">
+            <a href="@Url.Action("Full_Information" , "Passenger" , new { id = item.Id })" class="btn btn-default btn-sm">
                 مشاهده کردن
                 <span class="glyphicon glyphicon-eye-open"></span>
             </a>
@@ -120,9 +98,3 @@
 }
 
 </table>
-<div class="row text-center">
-    <a href="@Url.Action("Create","Passenger")" class="btn btn-primary btn-sm">
-        ADD
-        <span class="glyphicon glyphicon-plus"></span>
-    </a>
-</div>
